Wed Jun  6 02:33:37 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* include/errno.h (program_invocation_name,
	program_invocation_short_name): Add.
	* unix/unix.c (program_invocation_name, program_invocation_short_name):
	Define.
	(__unixinit): Setup program_invocation_name and
	program_invocation_short_name.
	* incl-local/internal/unix.h (__get_program_name): Remove.
	* unix/features.c (__get_program_name): Make static and rename to
	get_program_name.  Simplify in case __program_name is defined.
	No longer check on Unix directory separators.
	(__runtime_features): Follow __get_program_name rename.
	* sys/mman.c (mmap): Use program_invocation_short_name instead of
	__get_program_name.
	* stdio/err.c (output): Likewise.
	(vwarnx): Call output with do_code set to 0.
	* unix/dirent.c (newstream, closedir): Avoid compiler warning.
	* include/sys/param.h (howmany,rounddown,roundup,roundup2,powerof2,MIN,
	MAX): Add.

Wed Jun  6 00:58:55 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* include/err.h: Add.
	* stdio/err.c: Add.
	* Makefile.am (stdio_src): Add stdio/err.c.
	* include/kernel.h: Fix whitespace.
	* unix/features.c (__get_program_name): Shuffle local variables.

Fri Jun  1 00:29:28 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* include/fcntl.h (O_BINARY, O_TEXT): Assign value 0 as UnixLib won't
	do anything when set.
	(O_PIPE, O_UNLINKED): Move too...
	* incl-local/fcntl.h: ...here.  New file.
	* sys/_vfork.s: Tuned some comments.

Wed May 16 02:38:43 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* stdlib/mkstemp.c (mkstemp): Change O_TRUNC into O_EXCL.
	(mkstemp64): Add.
	* include/stdlib.h (mkstemp64): Add.
	* stdio/tmpfile.c (generate_temporary_filename): Simplify. Improve
	template checking.  Add offset to start index.
	(get_tmpdir, isdir): Add.
	(__tmpbuf): Adjust length to L_tmpnam.
	(tmpnam, tmpnam_r): Support __RISCOSIFY_NO_PROCESS case.  Fixes bug
	#238.
	(tempnam): Remove strategy 4, was the same as 3.  Support
	__RISCOSIFY_NO_PROCESS case.