@@ -1,7 +1,7 @@
 /* getpwuid_r ()
  * Search for an entry with a matching user ID (re-entrant version).
  * Written by Nick Burrett, 10 December 1997.
- * Copyright (c) 1997-2010 UnixLib Developers
+ * Copyright (c) 1997-2012 UnixLib Developers
  */
 
 #include <stddef.h>
@@ -12,6 +12,41 @@
 
 #include <pthread.h>
 #include <internal/unix.h>
+#include <string.h>
+
+static int copy_default (struct passwd *to,
+			 char *buffer,
+			 size_t buflen,
+			 struct passwd *from)
+{
+  char *buffp = buffer;
+  size_t buffer_remaining = buflen;
+  size_t member_len;
+
+#define COPY_MEMBER(member) \
+  if (from->member == NULL) \
+    to->member = NULL; \
+  else \
+  { \
+    member_len = strlen (from->member) + 1; \
+    if (member_len > buffer_remaining) \
+      return __set_errno (ERANGE); \
+    memcpy (buffp, from->member, member_len); \
+    to->member = buffp; \
+    buffp += member_len; \
+    buffer_remaining -= member_len; \
+  }
+
+  to->pw_uid = from->pw_uid;
+  to->pw_gid = from->pw_gid;
+  COPY_MEMBER (pw_name)
+  COPY_MEMBER (pw_passwd)
+  COPY_MEMBER (pw_gecos)
+  COPY_MEMBER (pw_dir)
+  COPY_MEMBER (pw_shell)
+
+  return 0;
+}
 
 int
 getpwuid_r (uid_t uid, struct passwd *resbuf, char *buffer, size_t buflen,
@@ -25,8 +60,12 @@ getpwuid_r (uid_t uid, struct passwd *resbuf, char *buffer, size_t buflen,
   FILE *stream = fopen ("/etc/passwd", "r");
   if (stream == NULL)
     {
+      /* FIXME: Should result point to the user buffer as below?
+                Can result be NULL? (It's tested for below, but not here) */
       *result = __pwddefault ();
-      return 0;
+
+      /* Fill the user supplied buffer with the default values.  */
+      return copy_default (resbuf, buffer, buflen, *result);
     }
 
   struct passwd *p;
